--- a/library_pickaddress/build.gradle
+++ b/library_pickaddress/build.gradle
@@ -35,7 +35,7 @@ publish {
     userOrg = 'tikou'//bintray.com用户名
     groupId = 'com.tikou'//jcenter上的路径
     artifactId = 'pickaddress'//项目名称
-    publishVersion = '1.0.0'//版本号
+    publishVersion = '1.0.1'//版本号
     desc = 'Oh hi, this is a nice description for a project, right?'//描述，不重要
-    website = 'https://github.com/hyman/basetools'//网站，不重要；尽量模拟github上的地址，例如我这样的；当然你有地址最好了
+    website = 'https://github.com/Tiannuo/PickAddress'//网站，不重要；尽量模拟github上的地址，例如我这样的；当然你有地址最好了
 }
